--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -4,15 +4,19 @@
     <link rel="stylesheet" href="sansao.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rhyllary</title>
+    <title>fecha o olho agora</title>
 </head>
 <body>
     <h1>EU VI RHYLLARY</h1>
-        <p>pra sua infelicidade, eu vi tudo</p>
-        <p>e faz mt tempo q eu n mexia em html hein, pode parar e nao xinga meu site simples</p>
-        <img src="https://i.pinimg.com/236x/28/23/6f/28236f3de84efaaaa90b8d5b11c22aff.jpg" alt="engaulsinho" id="engual">
-        <img src="https://i.pinimg.com/564x/bb/1d/6f/bb1d6fa3c86eaf27536cc6c27c9dafbd.jpg" alt="engaulsinho" id="engual">
-        <img src="https://i.pinimg.com/564x/11/7e/e7/117ee7cc6b520f321008184b5fee68af.jpg" alt="engaulsinho" id="engual">
+        <p>pra sua infelicidade, eu vi tudo e ainda vou ver os java quando tudo tiver pronto</p>
+        <p>e faz mt tempo q eu n mexia em html hein, pode parar e nao xinga meu site simples, e entao, meio q n sei oq falar aqui sabe, mas eu vou escrever
+            uns negocio, sabia que tem uma temperatura tão extrema de baixa em que até os atómos se congelam, o famoso "zero absoluto", nenhum lugar tem essa exata temperatura q é -273°C
+            ou o famoso 0 Kelvin, mas tem um lugar no universo, alguma coisa chamada bumerangue la, em que a temperatura chega a -272°C, ou seja só um grau mais quente que o zero absoluto. 
+            Dahora né? mas é isso, não aguento mais ouvir funk e queria da um deitada, entao tchau tchau 🎃
+        </p>
+        <img src="https://i.pinimg.com/236x/28/23/6f/28236f3de84efaaaa90b8d5b11c22aff.jpg" title="🐱🐱" alt="engaulsinho" id="engual">
+        <img src="https://i.pinimg.com/736x/ea/0a/fb/ea0afb20a185d4e21a22e061d031a27a.jpg" title="👻👻" alt="engaulsinho" id="engual">
+        <img src="https://i.pinimg.com/564x/11/7e/e7/117ee7cc6b520f321008184b5fee68af.jpg" title="🏍🏍" alt="engaulsinho" id="engual">
     <h3>e com esta bela linha de escrita, finalizo meu belíssimo site, obrigado!</h3>
 </body>
 </html>
