--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -4,19 +4,31 @@
     <link rel="stylesheet" href="sansao.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fecha o olho agora</title>
+    <title>O princípio</title>
 </head>
 <body>
-    <h1>EU VI RHYLLARY</h1>
-        <p>pra sua infelicidade, eu vi tudo e ainda vou ver os java quando tudo tiver pronto</p>
-        <p>e faz mt tempo q eu n mexia em html hein, pode parar e nao xinga meu site simples, e entao, meio q n sei oq falar aqui sabe, mas eu vou escrever
-            uns negocio, sabia que tem uma temperatura tão extrema de baixa em que até os atómos se congelam, o famoso "zero absoluto", nenhum lugar tem essa exata temperatura q é -273°C
-            ou o famoso 0 Kelvin, mas tem um lugar no universo, alguma coisa chamada bumerangue la, em que a temperatura chega a -272°C, ou seja só um grau mais quente que o zero absoluto. 
-            Dahora né? mas é isso, não aguento mais ouvir funk e queria da um deitada, entao tchau tchau 🎃
-        </p>
-        <img src="https://i.pinimg.com/236x/28/23/6f/28236f3de84efaaaa90b8d5b11c22aff.jpg" title="🐱🐱" alt="engaulsinho" id="engual">
-        <img src="https://i.pinimg.com/736x/ea/0a/fb/ea0afb20a185d4e21a22e061d031a27a.jpg" title="👻👻" alt="engaulsinho" id="engual">
-        <img src="https://i.pinimg.com/564x/11/7e/e7/117ee7cc6b520f321008184b5fee68af.jpg" title="🏍🏍" alt="engaulsinho" id="engual">
-    <h3>e com esta bela linha de escrita, finalizo meu belíssimo site, obrigado!</h3>
+    <nav>
+        <div class="logo">
+        	<p>Rhyllary não 👀</p>
+        </div>
+        <ul>
+            <li> <a href="lanraja.html">Principal</a></li>
+            <li> <a href="fotos.html">Fotos</a></li>
+        </ul>
+    </nav>
+    <header>
+    <h1 id=inf>Informações</h1>
+        <div class="esquerda"><p>Pra sua infelicidade, eu vi tudo e ainda vou ver os java quando tudo tiver pronto.</p>
+        <p>E faz mt tempo q eu n mexia em html hein, pode parar e nao xinga meu site simples, e entao, meio q n sei oq falar aqui sabe, mas eu vou escrever
+            uns negocio, sabia que tem uma temperatura tão extrema de baixa em que até os atómos se congelam, <strong>o famoso "zero absoluto"</strong>, 
+            nenhum lugar tem essa exata temperatura q é <strong>-273°C</strong> ou o famoso 0 Kelvin, mas tem um lugar no universo, alguma coisa chamada bumerangue la, 
+            em que a temperatura chega a -272°C, ou seja só um grau mais quente que o zero absoluto. 
+            Dahora né? mas é isso, não aguento mais ouvir funk(e phonk) e queria da um deitada, entao tchau tchau.</p></div>
+    </header>
+    <p id="quasar"> e vc sabe oq é um BLAZAR??</p>
+    <a href="https://youtu.be/8MjLlfLmPSY"><img src="https://i.pinimg.com/originals/e3/b6/9d/e3b69d903a932a33edc2fe7695fa60da.jpg" title="egernia!" alt="engaulsinho" id="xiu" div class="esconder"></a>
+    <footer id="i">
+        <p>Desenvolvido por CarKau 🔮</p>
+    </footer>
 </body>
 </html>
