--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -10,6 +10,7 @@
     <nav>
         <div class="logo">
         	<p>Rhyllary não 👀</p>
+            <p>Eu olhei😁</p>
         </div>
         <ul>
             <li> <a href="lanraja.html">Principal</a></li>
