--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -31,6 +31,8 @@
     <a href="https://youtu.be/8MjLlfLmPSY"><img src="https://i.pinimg.com/originals/e3/b6/9d/e3b69d903a932a33edc2fe7695fa60da.jpg" title="egernia!" alt="engaulsinho" id="xiu" div class="esconder"></a>
     <footer id="i">
         <p>Desenvolvido por CarKau 🔮</p>
+        <li>eu descobri como editar pelo celular, e 
+            não é por nada não, mais eu foi muito programadora agora tá afff😌</li>
     </footer>
 </body>
 </html>
