--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -32,7 +32,7 @@
     <footer id="i">
         <p>Desenvolvido por CarKau 🔮</p>
         <li>eu descobri como editar pelo celular, e 
-            não é por nada não, mais eu foi muito programadora agora tá afff😌</li>
+            não é por nada não, mais eu foi muito programadora agora tá afff😌 (nunca duvidei ta) usou vscode mobile??</li>
     </footer>
 </body>
 </html>
