Português tá foda hoje lanraja.html

--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -33,7 +33,7 @@
         <p>Desenvolvido por CarKau 🔮</p>
         <li>eu descobri como editar pelo celular, e 
             não é por nada não, mais eu foi muito programadora agora tá afff😌 (nunca duvidei ta) usou vscode mobile??</li>
-        <li>nunca duvidou😑 hummm(eu duvidei) sla tbm foi funsando tudo aqui é conseguir editar pelo celular doideira afff sou muito foda já posso acabar o curso😌😌😌</li>
+        <li>nunca duvidou😑 hummm(eu duvidei) sla tbm, foi funsando tudo aqui é consegui editar pelo celular doideira afff sou muito foda já posso acabar o curso😌😌😌</li>
     </footer>
 </body>
 </html>
