Rhyllary no tédio lanraja.html

--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -25,7 +25,18 @@
             uns negocio, sabia que tem uma temperatura tão extrema de baixa em que até os atómos se congelam, <strong>o famoso "zero absoluto"</strong>, 
             nenhum lugar tem essa exata temperatura q é <strong>-273°C</strong> ou o famoso 0 Kelvin, mas tem um lugar no universo, alguma coisa chamada bumerangue la, 
             em que a temperatura chega a -272°C, ou seja só um grau mais quente que o zero absoluto. 
-            Dahora né? mas é isso, não aguento mais ouvir funk(e phonk) e queria da um deitada, entao tchau tchau.</p></div>
+            Dahora né? mas é isso, não aguento mais ouvir funk(e phonk) e queria da um deitada, entao tchau tchau.</p><br>
+
+            <p>ESTOU NO TÉDIO SEM TWITTER E VIM FALAR ALGO QUE NINGUÉM SE INTERESSA, E TALVEZ NEM CONHEÇA</p>
+            <P>apenas curiosides aleatórias</P>
+           
+            <p>as pirâmides foram construídas nas décadas por volta de 2.500 aC, durante um período denominado Reino Antigo do Antigo Egito. Portanto, qualquer alinhamento celestial que eles tenham com o céu noturno teria que coincidir com a aparência do céu há cerca de 4.500 anos.<br>
+            As teorias sobre a conexão das pirâmides com as estrelas são antigas. Mas na década de 1980, um pesquisador chamado Robert Bauval surgiu com uma sugestão que desde então se enterrou na mente do público. Ele ressaltou que há semelhanças entre o layout das três pirâmides do Complexo de Gizé e a separação relativa entre as três estrelas do Cinturão de Órion (no cinturão temos as fomosas chamadas 3 marias) (curiosida: no meu rosto eu tenho a marca das três Marias como pinta, sla já que estamos falando disso achei interessante mesmo que não seja)  na constelação de Órion. 
+            A ideia se tornou popular no best-seller de Bauval do New York Times de 1995, The Orion Mystery, que expandiu a noção de que “as pirâmides foram criadas para servir como um portal para as estrelas”. Bauval afirmou que a constelação de Orion governou a construção de todas as pirâmides. Sua ideia ficou conhecida como “teoria da correlação de Orion”. <br>
+            é um fato curioso eu acho! nem sei como ficou esse meu comentário aqui pq não consigo rodar o site, só codificar mais acho que é isso
+            as pirâmides são fodas e a constelação de Órion tbm,.afinal ela é uma das constelações que conseguimos ver no céu a noite sem medir esforços😁</p><br> 
+            <p>ESPERO QUE EU NÃO TENHA CAGADO NO SEU SITE CARLOS, dito isso já peço desculpas antecipadamente😔</p>
+        </div>
     </header>
     <p id="quasar"> e vc sabe oq é um BLAZAR??</p>
     <a href="https://youtu.be/8MjLlfLmPSY"><img src="https://i.pinimg.com/originals/e3/b6/9d/e3b69d903a932a33edc2fe7695fa60da.jpg" title="egernia!" alt="engaulsinho" id="xiu" div class="esconder"></a>
