--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -29,13 +29,13 @@
 
             <p>ESTOU NO TÉDIO SEM TWITTER E VIM FALAR ALGO QUE NINGUÉM SE INTERESSA, E TALVEZ NEM CONHEÇA</p>
             <P>apenas curiosides aleatórias</P>
-           
             <p>as pirâmides foram construídas nas décadas por volta de 2.500 aC, durante um período denominado Reino Antigo do Antigo Egito. Portanto, qualquer alinhamento celestial que eles tenham com o céu noturno teria que coincidir com a aparência do céu há cerca de 4.500 anos.<br>
             As teorias sobre a conexão das pirâmides com as estrelas são antigas. Mas na década de 1980, um pesquisador chamado Robert Bauval surgiu com uma sugestão que desde então se enterrou na mente do público. Ele ressaltou que há semelhanças entre o layout das três pirâmides do Complexo de Gizé e a separação relativa entre as três estrelas do Cinturão de Órion (no cinturão temos as fomosas chamadas 3 marias) (curiosida: no meu rosto eu tenho a marca das três Marias como pinta, sla já que estamos falando disso achei interessante mesmo que não seja)  na constelação de Órion. 
             A ideia se tornou popular no best-seller de Bauval do New York Times de 1995, The Orion Mystery, que expandiu a noção de que “as pirâmides foram criadas para servir como um portal para as estrelas”. Bauval afirmou que a constelação de Orion governou a construção de todas as pirâmides. Sua ideia ficou conhecida como “teoria da correlação de Orion”. <br>
             é um fato curioso eu acho! nem sei como ficou esse meu comentário aqui pq não consigo rodar o site, só codificar mais acho que é isso
             as pirâmides são fodas e a constelação de Órion tbm,.afinal ela é uma das constelações que conseguimos ver no céu a noite sem medir esforços😁</p><br> 
             <p>ESPERO QUE EU NÃO TENHA CAGADO NO SEU SITE CARLOS, dito isso já peço desculpas antecipadamente😔</p>
+            <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto, fiquei curioso. E pena que se n consegue rodar o site, tem um negocio escondido no site, mas por código é facil achar 😞</p>
         </div>
     </header>
     <p id="quasar"> e vc sabe oq é um BLAZAR??</p>
@@ -45,6 +45,7 @@
         <li>eu descobri como editar pelo celular, e 
             não é por nada não, mais eu foi muito programadora agora tá afff😌 (nunca duvidei ta) usou vscode mobile??</li>
         <li>nunca duvidou😑 hummm(eu duvidei) sla tbm, foi funsando tudo aqui é consegui editar pelo celular doideira afff sou muito foda já posso acabar o curso😌😌😌</li>
+        <li>kkkkkkk, mds, entao termina esse curso logo ja q pode 🙄</li>
     </footer>
 </body>
 </html>
