--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -35,7 +35,8 @@
             é um fato curioso eu acho! nem sei como ficou esse meu comentário aqui pq não consigo rodar o site, só codificar mais acho que é isso
             as pirâmides são fodas e a constelação de Órion tbm,.afinal ela é uma das constelações que conseguimos ver no céu a noite sem medir esforços😁</p><br> 
             <p>ESPERO QUE EU NÃO TENHA CAGADO NO SEU SITE CARLOS, dito isso já peço desculpas antecipadamente😔</p>
-            <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto, fiquei curioso. E pena que se n consegue rodar o site, tem um negocio escondido no site, mas por código é facil achar 😞</p>
+            <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto, fiquei curioso. 
+            E pena que se n consegue rodar o site, tem um negocio escondido no site, mas por código é facil achar 😞</p>
         </div>
     </header>
     <p id="quasar"> e vc sabe oq é um BLAZAR??</p>
