--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -35,8 +35,9 @@
             é um fato curioso eu acho! nem sei como ficou esse meu comentário aqui pq não consigo rodar o site, só codificar mais acho que é isso
             as pirâmides são fodas e a constelação de Órion tbm,.afinal ela é uma das constelações que conseguimos ver no céu a noite sem medir esforços😁</p><br> 
             <p>ESPERO QUE EU NÃO TENHA CAGADO NO SEU SITE CARLOS, dito isso já peço desculpas antecipadamente😔</p>
-            <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto, fiquei curioso, eu tenho o simbolo
-            Illuminati🔺 no meu rosto. E pena que se n consegue rodar o site, tem um negocio escondido no site, mas por código é facil achar 😞</p>
+            <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto(são três pintinhas que ficam perto do meu olho, as pessoas dizem que quem tem essa marca recebe coisas boas do universo mais não acredito não, só acontece merda comigo afff🙄), fiquei curioso, eu tenho o simbolo
+            Illuminati🔺 no meu rosto(caralhooo agora eu tbm quero ver😌). E pena que se n consegue rodar o site, tem um negocio escondido no site(affffffff), mas por código é facil achar 😞(a,pra mim não sou meio lerda)</p>
+            
         </div>
     </header>
     <p id="quasar"> e vc sabe oq é um BLAZAR??</p>
@@ -46,7 +47,7 @@
         <li>eu descobri como editar pelo celular, e 
             não é por nada não, mais eu foi muito programadora agora tá afff😌 (nunca duvidei ta) usou vscode mobile??</li>
         <li>nunca duvidou😑 hummm(eu duvidei) sla tbm, foi funsando tudo aqui é consegui editar pelo celular doideira afff sou muito foda já posso acabar o curso😌😌😌</li>
-        <li>kkkkkkk, mds, entao termina esse curso logo ja q pode 🙄</li>
+        <li>kkkkkkk, mds, entao termina esse curso logo ja q pode 🙄(afff affff)</li>
     </footer>
 </body>
 </html>
