--- a/RhyllaryNãoOlhe/lanraja.html
+++ b/RhyllaryNãoOlhe/lanraja.html
@@ -40,6 +40,7 @@
             <p>ESPERO QUE EU NÃO TENHA CAGADO NO SEU SITE CARLOS, dito isso já peço desculpas antecipadamente😔</p>
             <p>interessante Rhyllary, nao cagou com o site fica suave, pode usar o site como quiser, ta no seu github msm 🤐 e eu quero ver essas três marias ai no seu rosto(são três pintinhas que ficam perto do meu olho, as pessoas dizem que quem tem essa marca recebe coisas boas do universo mais não acredito não, só acontece merda comigo afff🙄), fiquei curioso, eu tenho o simbolo
             Illuminati🔺 no meu rosto(caralhooo agora eu tbm quero ver😌). E pena que se n consegue rodar o site, tem um negocio escondido no site(affffffff), mas por código é facil achar 😞</p><br>
+            <p>eu tambem sei esconder as coisas, quero ver vc achar agora, SEM olhar no codigo</p>
 
             
         </div>
