--- a/RhyllaryNãoOlhe/fotos.html
+++ b/RhyllaryNãoOlhe/fotos.html
@@ -22,7 +22,10 @@
         <img src="https://i.pinimg.com/736x/5c/58/54/5c585427e211e6d60d000c95ada0f6f1.jpg" alt="engaulsinho" id="pulsar">
         <img src="https://i.pinimg.com/236x/fc/d2/06/fcd206028466b981a3e8ab008b31efce.jpg" alt="engaulsinho" id="pulsar">
         <img src="https://i.pinimg.com/474x/cb/c2/23/cbc223f112edc4b080bf9041c8c443c2.jpg" alt="engaulsinho" id="pulsar">
-        <a href="https://youtu.be/iU9YM1Lfvt8"><img src="https://i.pinimg.com/236x/b1/e0/69/b1e069e1cd676478fcfd230cb9f34510.jpg"  alt="engaulsinho" id="pulsar"></a>
+        <img src="https://i.pinimg.com/474x/cb/c2/23/cbc223f112edc4b080bf9041c8c443c2.jpg" alt="engaulsinho" id="pulsar">
+        <a href="https://www.tiktok.com/@astroo_nasa/video/7373826724900900128?is_from_webapp=1&sender_device=pc&web_id=7418670328844649990
+
+        "><img src="imagem/gato2.jpg"  alt="engaulsinho" id="pulsar"></a>
         <img src="imagem/descubraa.png" alt="engaulsinho" id="pulsar">
         <h5>-- . / -.-. --- -. - . / ..- -- .- / -.-. ..- .-. .. --- ... .. -.. .- -.. . / .- .. / -.-. .- .-. .-.. --- ... / ---... -.--.-</h5>
         
